[gd_scene load_steps=6 format=2]

[ext_resource path="res://GUI/MainMenu/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://global_theme.tres" type="Theme" id=2]
[ext_resource path="res://Fonts/LandasansMedium-ALJ6m.otf" type="DynamicFontData" id=3]

[sub_resource type="StyleBoxFlat" id=1]

[sub_resource type="DynamicFont" id=2]
size = 64
use_filter = true
font_data = ExtResource( 3 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Panel" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_right = 500.0
margin_bottom = 282.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
margin_right = 500.0
margin_bottom = 282.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 140.0
margin_top = 15.0
margin_right = 349.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 2 )
text = "Paramnesia"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadGame" type="Button" parent="."]
margin_left = 187.0
margin_top = 126.0
margin_right = 303.0
margin_bottom = 163.0
text = "Load Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewGame" type="Button" parent="."]
margin_left = 187.0
margin_top = 88.0
margin_right = 303.0
margin_bottom = 125.0
text = "New Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="Button" parent="."]
margin_left = 187.0
margin_top = 164.0
margin_right = 303.0
margin_bottom = 201.0
text = "Settings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="Button" parent="."]
margin_left = 188.0
margin_top = 202.0
margin_right = 303.0
margin_bottom = 239.0
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsBackground" type="Panel" parent="."]
visible = false
margin_right = 500.0
margin_bottom = 282.0
[connection signal="pressed" from="LoadGame" to="." method="_on_LoadGame_pressed"]
[connection signal="pressed" from="NewGame" to="." method="_on_NewGame_pressed"]
[connection signal="pressed" from="Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_Exit_pressed"]
